2004-07-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fix broken pot file name for
	evolution-exchange.

2004-07-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fix broken pot file name for gdm2.

2004-07-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: zenity has been branched.

2004-07-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Yelp maintainer says
	yelp gnome-2-6 branch will be used for GNOME 2.8.

2004-07-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added eggcups to extras.

2004-07-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved vino to proposed.

2004-07-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-keyring-manager to proposed.

2004-07-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added criawips to extras.

2004-07-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed the planner branch.

2004-07-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added jumpnbumpmenu to extras.

2004-07-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Hydrogen was renamed evolution-jescs.

2004-06-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added evolution-brainread.

2004-06-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-applets-locations.

2004-06-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Marked setup-tools-backends as
	proposed.

2004-06-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added hydrogen to extras.

2004-06-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: metacity has been branched.

2004-06-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-schedule to extras.

2004-06-15  Christian Rose  <menthos@menthos.com>
