@@ -2033,17 +2033,6 @@
       </component>
     </version>
   </module>
-  <module name="magicdev">
-    <version release="gnome-2.8">
-      <component name="magicdev" dir="magicdev" group="extras">
-	<podir dir="po"/>
-	<potname name="magicdev.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-  </module>
   <module name="marlin">
     <version release="gnome-2.8">
       <component name="marlin" dir="marlin" group="extras">
