@@ -1,3 +1,8 @@
+2004-07-22  Christian Neumair  <chris@gnome-de.org>
+
+	* translation-status.xml: Remove magicdev. Its development is
+	discontinued.
+
 2004-07-21  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fix broken pot file name for
